# sensorInterfaces

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  hwlib.rar
examples/: UltrasonicSensorTestCode.cpp  VirtualLidarExample.cpp  VirtualUltrasonicSensorExample.cpp
source/include/: CoordinateAttitude.hpp  DistanceSensor.hpp  Locatable.hpp  LocatedDistanceSensor.hpp  Sensor.hpp  Stubs.hpp  UltrasonicSensor.hpp  VirtualLidar.hpp  VirtualUltrasonicSensor.hpp
source/src/: HwlibTestCode.cpp  UltrasonicSensor.cpp  UltrasonicSensorTestCode.cpp  VirtualLidar.cpp  VirtualUltrasonicSensor.cpp
source/src/propeller/: UltrasonicSensor.cpp  UltrasonicSensorTestCode.cpp
test/: CustomSensor.hpp  CustomSensor_Test.cpp  Main_TestAll.cpp  SensorResult_Test.cpp  UltrasonicSensor_Test.cpp  VirtualSensorTest.cpp
